voting-app/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: mywebsite
    tier: frontend-deployment
spec:
  replicas: 4
  template:
    metadata :
      name : voting-app-pod
      labels:
        name : voting-app-pod
        app : demo-voting-app
    spec :
      containers :
      - name : voting-app
        image : kodekloud/examplevotingapp_vote:v1
        ports:
          - containerPort : 80  
  selector:
    matchLabels:
        app : demo-voting-app
        app : demo-voting-app
